force-app/main/default/objects/Group_AU__c/Group_AU__c.object-meta.xml
<CustomObject>
    <description>For Group B2B Group AU tracking</description>
    <label>Group AU</label>
    <nameField>
        <displayFormat>AU-{YYYY}{MM}{0000}</displayFormat>
        <label>Group AU Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group AUs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>