force-app/main/default/objects/Group_AU__c/fields/AU__c.field-meta.xml
<CustomField>
    <fullName>AU__c</fullName>
    <description>Group AU value</description>
    <inlineHelpText>Group AU value</inlineHelpText>
    <label>AU</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>