force-app/main/default/objects/Group_AU__c/fields/F_Departing__c.field-meta.xml
<CustomField>
    <fullName>F_Departing__c</fullName>
    <formula>IF(
CONTAINS(TEXT(Route__c), &quot;(one-way)&quot;),
LEFT(TEXT(Route__c), 7),
IF(
AND(
LEN(TEXT(Route__c)) &gt; 12,
NOT(CONTAINS(TEXT(Route__c), &quot;(one-way)&quot;))
),
LEFT(TEXT(Route__c), 7),
IF(
LEN(TEXT(Route__c)) = 11,
LEFT(TEXT(Route__c),7),
/* 預設值，如果以上條件都不滿足，返回空字串或其他適合的預設值 */
&quot;&quot;
)
)
)</formula>
    <label>Departing</label>
    <type>Text</type>
</CustomField>