force-app/main/default/objects/Group_AU__c/fields/Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date__c</fullName>
    <label>Flight Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>