force-app/main/default/objects/Group_AU__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <description>Flight No., e.g. JX201</description>
    <inlineHelpText>Flight No., e.g. JX201</inlineHelpText>
    <label>Flight Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>