force-app/main/default/objects/Group_AU__c/fields/Previous_AU__c.field-meta.xml
<CustomField>
    <fullName>Previous_AU__c</fullName>
    <description>The Previous AU value</description>
    <inlineHelpText>The Previous AU value</inlineHelpText>
    <label>Previous AU</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>