force-app/main/default/objects/Group_AU__c/fields/Previous_Modify_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Modify_Date__c</fullName>
    <label>Previous Modify Date</label>
    <type>Date</type>
</CustomField>