force-app/main/default/objects/Group_AU__c/fields/WaypointOutside__c.field-meta.xml
<CustomField>
    <fullName>WaypointOutside__c</fullName>
    <formula>LEFT(RIGHT(TEXT(Route__c),7),3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WaypointOutside</label>
    <type>Text</type>
</CustomField>