force-app/main/default/objects/Group_AU__c/fields/WaypointTaiwan__c.field-meta.xml
<CustomField>
    <fullName>WaypointTaiwan__c</fullName>
    <formula>LEFT(TEXT(Route__c),3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WaypointTaiwan</label>
    <type>Text</type>
</CustomField>