force-app/main/default/objects/Group_AU__c/validationRules/Flight_Maximum_Seats.validationRule-meta.xml
<ValidationRule>
    <fullName>Flight_Maximum_Seats</fullName>
    <active>false</active>
    <description>To Control Maximum Seats</description>
    <errorConditionFormula>AU__c &gt; 180</errorConditionFormula>
    <errorDisplayField>AU__c</errorDisplayField>
    <errorMessage>Flight exceed to the maximum seats for A321</errorMessage>
</ValidationRule>