force-app/main/default/objects/Group_AU__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Flight_Number__c</columns>
    <columns>Flight_Date__c</columns>
    <columns>AU__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Route__c</field>
        <operation>equals</operation>
        <value>TPE-HAN-TPE</value>
    </filters>
    <label>All</label>
</ListView>